unpackaged/main/default/objects/Commission__c/fields/Loan_Pal_Dealer_Value__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pal_Dealer_Value__c</fullName>
    <label>Loan Pal Dealer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>