unpackaged/main/default/objects/Commission__c/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <formula>VALUE(Text(Opportunity__r.Loan_Term__c))</formula>
    <label>Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>