unpackaged/main/default/objects/Commission__c/fields/Loanpal_Dealer_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Loanpal_Dealer_Value_2__c</fullName>
    <formula>IF( Loan_Pal_Dealer_Fees__c &gt; 0, Loan_Pal_Dealer_Fees__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loanpal Dealer Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>