unpackaged/main/default/objects/Commission__c/fields/M1__c.field-meta.xml
<CustomField>
    <fullName>M1__c</fullName>
    <formula>Commission_Plan__r.Milestone_1_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M1 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>