unpackaged/main/default/objects/Commission__c/fields/M1_Clawback_Amount__c.field-meta.xml
<CustomField>
    <fullName>M1_Clawback_Amount__c</fullName>
    <label>M1 Clawback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>