unpackaged/main/default/objects/Commission__c/fields/M1_Clawback_Applied_Paid__c.field-meta.xml
<CustomField>
    <fullName>M1_Clawback_Applied_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M1 Clawback Applied to Balance (Paid)</label>
    <type>Checkbox</type>
</CustomField>