unpackaged/main/default/objects/Commission__c/fields/M1_Clawback_Applied_to_Balance_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>M1_Clawback_Applied_to_Balance_Paid_Date__c</fullName>
    <label>M1 Clawback Applied to Balance(Paid)Date</label>
    <type>Date</type>
</CustomField>