unpackaged/main/default/objects/Commission__c/fields/M1_Clawback_Complete__c.field-meta.xml
<CustomField>
    <fullName>M1_Clawback_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M1 Clawback Processed</label>
    <type>Checkbox</type>
</CustomField>