unpackaged/main/default/objects/Commission__c/fields/M1_Clawback_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>M1_Clawback_Processed_Date__c</fullName>
    <label>M1 Clawback Processed Date</label>
    <type>Date</type>
</CustomField>