unpackaged/main/default/objects/Commission__c/fields/M1_Sales_Rep_Payroll_Paid__c.field-meta.xml
<CustomField>
    <fullName>M1_Sales_Rep_Payroll_Paid__c</fullName>
    <label>M1 Sales Rep Payroll Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>