unpackaged/main/default/objects/Commission__c/fields/M2__c.field-meta.xml
<CustomField>
    <fullName>M2__c</fullName>
    <formula>Commission_Plan__r.Milestone_2_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M2 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>