unpackaged/main/default/objects/Commission__c/fields/M2_Sales_Rep_Payroll_Paid__c.field-meta.xml
<CustomField>
    <fullName>M2_Sales_Rep_Payroll_Paid__c</fullName>
    <label>M2 Sales Rep Payroll Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>