unpackaged/main/default/objects/Commission__c/fields/M3__c.field-meta.xml
<CustomField>
    <fullName>M3__c</fullName>
    <label>M3 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>