unpackaged/main/default/objects/Commission__c/fields/M3_Early_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>M3_Early_Payment_Fee__c</fullName>
    <label>M3 Early Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>