unpackaged/main/default/objects/Commission__c/fields/Main_Service_Panel_Upgrade_Adder__c.field-meta.xml
<CustomField>
    <fullName>Main_Service_Panel_Upgrade_Adder__c</fullName>
    <formula>If(  Opportunity__r.Main_Service_Panel_Upgrade__c  = True, 2500 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Service Panel Upgrade Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>