unpackaged/main/default/objects/Commission__c/fields/Milestone_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Amount__c</fullName>
    <formula>CASE( Lead_Source_Type__c, 

"Independent", IA_M1_Amount_Value__c,

 X5_watt_M1_Value__c) - M1_Sales_Rep_Payroll_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone 1 Amount (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>