unpackaged/main/default/objects/Commission__c/fields/Milestone_1_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Date_Calculated__c</fullName>
    <formula>CASE(  Opportunity__r.X3rd_Party_Partner__c , "Commonwealth Energy MA, Inc",  

IF( Contract_Received_Date__c &gt; Date(2021,3,31),Contract_Received_Date__c, Opportunity__r.Contract_Received_Confirmed_Date__c),


Opportunity__r.Contract_Received_Confirmed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone 1 Date</label>
    <type>Date</type>
</CustomField>