unpackaged/main/default/objects/Commission__c/fields/Milestone_1_Paid__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone 1 Paid</label>
    <type>Checkbox</type>
</CustomField>