unpackaged/main/default/objects/Commission__c/fields/Milestone_1_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Paid_Date__c</fullName>
    <label>Milestone 1 Paid Date</label>
    <type>Date</type>
</CustomField>