unpackaged/main/default/objects/Commission__c/fields/Milestone_1_Processed__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone 1 Processed</label>
    <type>Checkbox</type>
</CustomField>