unpackaged/main/default/objects/Commission__c/fields/Milestone_1_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Processed_Date__c</fullName>
    <label>Milestone 1 Processed Date</label>
    <type>Date</type>
</CustomField>