unpackaged/main/default/objects/Commission__c/fields/Milestone_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_2_Amount__c</fullName>
    <formula>CASE( Loan_Pal__c , "Loan Pal", IF(Opportunity__r.Contract_Received_Confirmed_Date__c &lt; DATE(2019,3,18) , True_Total_Commissions_Value__c, X5_Watt_Total_Commissions_Value__c * Commission_Plan__r.Milestone_2_Percent__c),


CASE( Lead_Source_Type__c , 
"Independent", IA_M2_Amount_Value__c, 

(X5_Watt_Total_Commissions_Value__c * Commission_Plan__r.Milestone_2_Percent__c)))



+ Milestone_2_Commission_True_Up__c

+ 	CT_GreenBank_AdderValue__c 

- M2_Sales_Rep_Payroll_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone 2 Amount (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>