unpackaged/main/default/objects/Commission__c/fields/Milestone_2_Amount_Actual_Paid__c.field-meta.xml
<CustomField>
    <fullName>Milestone_2_Amount_Actual_Paid__c</fullName>
    <description>Actual Milestone 2 Amount Paid - To be used for comparison if price changes after initial M2 payment</description>
    <label>Milestone 2 Amount (Actual Paid)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>