unpackaged/main/default/objects/Commission__c/fields/Milestone_2_Commission_True_Up__c.field-meta.xml
<CustomField>
    <fullName>Milestone_2_Commission_True_Up__c</fullName>
    <formula>IF( OR( Milestone_1_Paid__c = True,IA_M1_Paid__c = True),

Milestone_1_Amount__c - Milestone_1_Amount_Actual_Paid__c,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone 2 Commission True-Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>