unpackaged/main/default/objects/Commission__c/fields/Milestone_2_Processed__c.field-meta.xml
<CustomField>
    <fullName>Milestone_2_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone 2 Processed</label>
    <type>Checkbox</type>
</CustomField>