unpackaged/main/default/objects/Commission__c/fields/Milestone_2_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_2_Processed_Date__c</fullName>
    <label>Milestone 2 Processed Date</label>
    <type>Date</type>
</CustomField>