unpackaged/main/default/objects/Commission__c/fields/Milestone_3_Actual_Paid__c.field-meta.xml
<CustomField>
    <fullName>Milestone_3_Actual_Paid__c</fullName>
    <label>Milestone 3 Actual Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>