unpackaged/main/default/objects/Commission__c/fields/Milestone_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_3_Amount__c</fullName>
    <formula>CASE( Lead_Source_Type__c , 
"Independent", IA_M3_Amount_Value__c,

     IF(   AND(Loan_Pal__c  = "Loan Pal",Opportunity__r.Contract_Received_Confirmed_Date__c &lt; DATE(2019,3,18)),
          0, ((X5_Watt_Total_Commissions_Value__c * Commission_Plan__r.Milestone_3_Percent__c ) +  Price_5_Watt__c)
        )  
  )

+ Milestone_3_Commission_True_Up__c -  M3_Early_Payment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone 3 Amount (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>