unpackaged/main/default/objects/Commission__c/fields/Milestone_3_Paid__c.field-meta.xml
<CustomField>
    <fullName>Milestone_3_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone 3 Paid</label>
    <type>Checkbox</type>
</CustomField>