unpackaged/main/default/objects/Commission__c/fields/Milestone_3_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_3_Processed_Date__c</fullName>
    <label>Milestone 3 Processed Date</label>
    <type>Date</type>
</CustomField>