unpackaged/main/default/objects/Commission__c/fields/Mosaic_Dealer_Value2__c.field-meta.xml
<CustomField>
    <fullName>Mosaic_Dealer_Value2__c</fullName>
    <formula>IF(Mosiac_Dealer_Fees__c&gt;0, Mosiac_Dealer_Fees__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mosaic Dealer Value2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>