unpackaged/main/default/objects/Commission__c/fields/Mosiac_Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Mosiac_Dealer_Fees__c</fullName>
    <formula>Case(  Opportunity__r.Financing_Tool__c ,

"Mosaic Loan", 
      0.12 * Opportunity__r.Amount, 

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mosiac Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>