unpackaged/main/default/objects/Commission__c/fields/Mosiac_Dealer_Value__c.field-meta.xml
<CustomField>
    <fullName>Mosiac_Dealer_Value__c</fullName>
    <label>Mosiac Dealer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>