unpackaged/main/default/objects/Commission__c/fields/Other_Misc_Adders__c.field-meta.xml
<CustomField>
    <fullName>Other_Misc_Adders__c</fullName>
    <label>Other / Misc Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>