unpackaged/main/default/objects/Commission__c/fields/Palmetto_Contribution_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Contribution_Upgrade__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Palmetto Contribution - Upgrades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>