unpackaged/main/default/objects/Commission__c/fields/Palmetto_Contribution_Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Contribution_Upgrades__c</fullName>
    <label>Palmetto Contribution - Upgrades Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>