unpackaged/main/default/objects/Commission__c/fields/Palmetto_Home_Adder__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Home_Adder__c</fullName>
    <formula>IF(   Opportunity__r.Contract_Received_Date__c &gt; Date(2018,10,1), IF(Opportunity__r.Palmetto_Home_Opt_In__c = True, 0, 0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Palmetto Home Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>