unpackaged/main/default/objects/Commission__c/fields/Palmetto_Protect_Cost__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Protect_Cost__c</fullName>
    <formula>Opportunity__r.Palmetto_Protect_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Palmetto Protect Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>