unpackaged/main/default/objects/Commission__c/fields/Panel_Type_Adder__c.field-meta.xml
<CustomField>
    <fullName>Panel_Type_Adder__c</fullName>
    <formula>Case( Opportunity__r.X3rd_Party_Partner__c , 

"Dvinci Energy", Dvinci_Panel_Type_Adder__c , 


CP_Panel_Type_Adder_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Type Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>