unpackaged/main/default/objects/Commission__c/fields/Price_5_Watt__c.field-meta.xml
<CustomField>
    <fullName>Price_5_Watt__c</fullName>
    <formula>IF(Opportunity__r.Contract_Received_Date__c &lt; DATE(2020,6,15) ,

IF (Price_Watt_Solar_Value__c &gt; 5, 

(Price_Watt_Solar_Value__c - 5) * 1000 * System_Size_DC__c


, 0)

, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$Price &gt; $5/Watt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>