unpackaged/main/default/objects/Commission__c/fields/Price_Watt__c.field-meta.xml
<CustomField>
    <fullName>Price_Watt__c</fullName>
    <formula>(Opportunity_Amount__c -  Battery_Adder_Value__c  )/ (System_Size_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$Price / Watt - Solar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>