unpackaged/main/default/objects/Commission__c/fields/Price_Watt_Solar_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Watt_Solar_Value__c</fullName>
    <label>$Price / Watt - Solar - Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>