unpackaged/main/default/objects/Commission__c/fields/Process_Early_M3_Payment__c.field-meta.xml
<CustomField>
    <fullName>Process_Early_M3_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Early M3 Payment</label>
    <type>Checkbox</type>
</CustomField>