unpackaged/main/default/objects/Commission__c/fields/PTO_Net_Meter_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>PTO_Net_Meter_Installed_Date__c</fullName>
    <formula>Opportunity__r.Net_Meter_Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTO / Net Meter Installed Date</label>
    <type>Date</type>
</CustomField>