unpackaged/main/default/objects/Commission__c/fields/Radiant_Barrier_Adder__c.field-meta.xml
<CustomField>
    <fullName>Radiant_Barrier_Adder__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Radiant Barrier Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>