unpackaged/main/default/objects/Commission__c/fields/Rep_Partner__c.field-meta.xml
<CustomField>
    <fullName>Rep_Partner__c</fullName>
    <formula>Text(Opportunity__r.X3rd_Party_Sales_Rep__c)</formula>
    <label>Rep/Partner</label>
    <type>Text</type>
</CustomField>