unpackaged/main/default/objects/Commission__c/fields/Roof_Replacement_Adder__c.field-meta.xml
<CustomField>
    <fullName>Roof_Replacement_Adder__c</fullName>
    <label>Roof Replacement Adder</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>