unpackaged/main/default/objects/Commission__c/fields/Roof_Type_Adder__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type_Adder__c</fullName>
    <formula>CASE(  Opportunity__r.Roof_Type__c , "Corrugated_Metal" , 100  ,

"Concrete", 250  ,

"Tile", Case(  Opportunity__r.Location__c ,"Arizona",0, "California",0, "Nevada", 0, 250) , 

"Single Ply/ Modified Bitumen/ Rolled", 150 , 


"Flat Roof", If( Contract_Received_Confirmed_Date__c &lt; Date(2020,04,24),  370,150)  ,0)

*  Opportunity__r.System_Size_Calculated_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roof Type Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>