unpackaged/main/default/objects/Commission__c/fields/Roofing_Adder__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Adder__c</fullName>
    <formula>Opportunity__r.Roofing_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reroof Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>