unpackaged/main/default/objects/Commission__c/fields/Sales_Accelerate_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accelerate_Fee__c</fullName>
    <label>Sales Accelerate Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>