unpackaged/main/default/objects/Commission__c/fields/Sales_Accelerate_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accelerate_Requested_Date__c</fullName>
    <label>Sales Accelerate Requested Date</label>
    <type>Date</type>
</CustomField>