unpackaged/main/default/objects/Commission__c/fields/Site_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Approved_Date__c</fullName>
    <formula>Opportunity__r.Site_Approved_Date__c</formula>
    <label>Site Approved Date</label>
    <type>Date</type>
</CustomField>