unpackaged/main/default/objects/Commission__c/fields/Solar_Edge_Warranty_Adder__c.field-meta.xml
<CustomField>
    <fullName>Solar_Edge_Warranty_Adder__c</fullName>
    <formula>IF(  Opportunity__r.Solar_Edge_25_yr_Extended_Warranty__c  = TRUE, 

CASE(   Opportunity__r.Location__c, 

"Massachusetts", IF(Opportunity__r.System_Size_kW_AC__c &gt; 7.6, 950, 700),

"New Jersey", IF(Opportunity__r.System_Size_kW_AC__c &gt; 7.6, 950, 700),

IF(  Opportunity__r.Battery_Qty__c &gt; 0, 1250, IF(Opportunity__r.System_Size_kW_AC__c &gt; 7.6, 750, 500))),


0) * ( IF( Opportunity__r.System_Size_Calculated_kW__c &gt;15, 2,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Edge Warranty Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>