unpackaged/main/default/objects/Commission__c/fields/Structural_Adder_Calc__c.field-meta.xml
<CustomField>
    <fullName>Structural_Adder_Calc__c</fullName>
    <formula>IF( Opportunity__r.Site_Approved_Date__c &lt; Date(2019,6,20), 1,

 IF(   OR(Opportunity__r.Installation_Complete_Date__c &gt; Date(2019,11,6),ISBLANK(Opportunity__r.Installation_Complete_Date__c) = True), 1,

1.1) 

) 


* ( Opportunity__r.Total_Adders_Quote__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reroof/Structural/Electrical UpgradeCalc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>