unpackaged/main/default/objects/Commission__c/fields/Structural_Electrical_Upgrade_Adder__c.field-meta.xml
<CustomField>
    <fullName>Structural_Electrical_Upgrade_Adder__c</fullName>
    <formula>Structural_Adder_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Upgrades Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>