unpackaged/main/default/objects/Commission__c/fields/Structural_Upgrade_Adder__c.field-meta.xml
<CustomField>
    <fullName>Structural_Upgrade_Adder__c</fullName>
    <formula>Opportunity__r.Structural_Electrical_Upgrade_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structural Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>