unpackaged/main/default/objects/Commission__c/fields/Sunlight_Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Dealer_Fees__c</fullName>
    <formula>Case(  Opportunity__r.Financing_Tool__c , 

"Sunlight",
      IF (TEXT(Opportunity__r.Loan_Term__c) = '25', 0.17 * Opportunity__r.Amount, 
       0.13 * Opportunity__r.Amount),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunlight Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>