unpackaged/main/default/objects/Commission__c/fields/Sunlight_Dealer_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Dealer_Value_2__c</fullName>
    <formula>IF( Mosiac_Dealer_Fees__c &gt; 0, Mosiac_Dealer_Fees__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunlight Dealer Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>