unpackaged/main/default/objects/Commission__c/fields/Sunlight_Dealer_Value__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Dealer_Value__c</fullName>
    <label>Sunlight Dealer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>