unpackaged/main/default/objects/Commission__c/fields/Total_Adders__c.field-meta.xml
<CustomField>
    <fullName>Total_Adders__c</fullName>
    <formula>Case(  Opportunity__r.X3rd_Party_Partner__c , 

"Harbor Energy",  Harbor_Total_Adders_Value__c , 


 CP_Total_Adders_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>