unpackaged/main/default/objects/Commission__c/fields/Total_Adders_Quote__c.field-meta.xml
<CustomField>
    <fullName>Total_Adders_Quote__c</fullName>
    <formula>Opportunity__r.Total_Adders_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Previously known as Total Adders Quote</inlineHelpText>
    <label>Total Upgrades Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>