unpackaged/main/default/objects/Commission__c/fields/Total_Adders_Upgrade_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Total_Adders_Upgrade_Incentives__c</fullName>
    <formula>Total_Adders__c +  Structural_Electrical_Upgrade_Adder__c - CT_GreenBank_Adder__c + Other_Misc_Adders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adders,Upgrade &amp; Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>