unpackaged/main/default/objects/Commission__c/fields/Total_Amount_to_Increase_Contract__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_to_Increase_Contract__c</fullName>
    <formula>Dealer_Fee_amount_for_Adder__c +  Opportunity__r.Total_Adders_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount to Increase Contract(Upgrde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>