unpackaged/main/default/objects/Commission__c/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <formula>Opportunity_Amount__c +  Downpayment__c - CP_Base__c - Dealer_Fees__c - Total_Adders__c - Structural_Electrical_Upgrade_Adder__c - Other_Misc_Adders__c - M3_Early_Payment_Fee__c +  CT_GreenBank_AdderValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>