unpackaged/main/default/objects/Commission__c/fields/Total_Commissions_Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions_Paid_To_Date__c</fullName>
    <formula>Milestone_1_Amount_Actual_Paid__c + Milestone_2_Amount_Actual_Paid__c + Milestone_3_Actual_Paid__c + M1_Sales_Rep_Payroll_Paid__c + M2_Sales_Rep_Payroll_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissions Paid (To Date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>