unpackaged/main/default/objects/Commission__c/fields/Total_Commissions_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions_Value__c</fullName>
    <label>Total Commissions Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>