unpackaged/main/default/objects/Commission__c/fields/Tree_Removal_Other_Adder__c.field-meta.xml
<CustomField>
    <fullName>Tree_Removal_Other_Adder__c</fullName>
    <formula>Opportunity__r.Tree_Removal_Other_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tree Removal / Other Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>