unpackaged/main/default/objects/Commission__c/fields/Trenching_Adder__c.field-meta.xml
<CustomField>
    <fullName>Trenching_Adder__c</fullName>
    <formula>Opportunity__r.Trenching_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trenching Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>