unpackaged/main/default/objects/Commission__c/fields/True_Total_Commissions_Value__c.field-meta.xml
<CustomField>
    <fullName>True_Total_Commissions_Value__c</fullName>
    <formula>CASE( Lead_Source_Type__c , 
"Channel", Total_Commissions_Value__c, IA_Total_Commissions_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Total Commissions Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>