unpackaged/main/default/objects/Commission__c/fields/X18_Character_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Character_Opportunity_ID__c</fullName>
    <formula>Opportunity__r.X18_Character_Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character Opportunity ID</label>
    <type>Text</type>
</CustomField>